# python_cli_wc_tool

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
src/wc_tool/: cli.py  wc.py
