[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cli-wc-tool"
version = "0.1.0"
description = "Python Implementation of Unix CLI wc tool."
authors = [
    { name = "Uche Okereke", email = "orezpablo@gmail.com" },
]
dependencies = [
    "click>=8.0.0",
    "black",
    "pytest"
]

[project.scripts]
pywc = "wc_tool.cli:main"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "./tests",
]

[tool.black]
line-length = 88
target-version = ['py38']
